@@ -1,0 +1,55 @@
+#
+# Analyse files with Musly, and provide an API to retrieve similar tracks
+#
+# Copyright (c) 2020-2021 Craig Drummond <craig.p.drummond@gmail.com>
+# GPLv3 license.
+#
+
+import logging
+import math
+import os
+import sys
+from . import metadata_db, musly
+
+_LOGGER = logging.getLogger(__name__)
+
+def test_jukebox(mus, app_config, jukebox_path):
+    _LOGGER.info('Testing musly')
+    
+    
+    meta_db = metadata_db.MetadataDb(app_config)
+    (paths, tracks) = mus.get_alltracks_db(meta_db.get_cursor())
+    ids = None
+
+    # If we can, load musly from jukebox...
+    if os.path.exists(jukebox_path):
+        ids = mus.get_jukebox_from_file(jukebox_path)
+
+    if ids==None or len(ids)!=len(tracks):
+        _LOGGER.info('Adding tracks from DB to musly')
+        ids = mus.add_tracks(tracks, app_config['styletracks'], meta_db)
+        mus.write_jukebox(jukebox_path)
+
+    meta_db.close()
+    mta=musly.MuslyTracksAdded(paths, tracks, ids)
+
+    ( resp_ids, resp_similarity ) = mus.get_similars( mta.mtracks, mta.mtrackids, 0, 51 )
+    if len(resp_similarity)<2:
+        _LOGGER.error('Too few tracks returned from similarity query???')
+    else:
+        sims=[]
+        nans=0
+        for i in range(1, len(resp_similarity)):
+            _LOGGER.debug('[%i] %f' % (i, resp_similarity[i]))
+            if math.isnan(resp_similarity[i]):
+                nans += 1
+            elif resp_similarity[i] not in sims:
+                sims.append(resp_similarity[i])
+        if nans>0:
+            _LOGGER.error('Musly returned an invalid similarity? Suggest you remove %s (and perhaps alter styletracks in config?)' % jukebox_path)
+            sys.exit(-1)
+        elif len(sims)<=1:
+            _LOGGER.error('All similarities the same? Suggest you remove %s (and perhaps alter styletracks in config?)' % jukebox_path)
+            sys.exit(-1)
+        else:
+            _LOGGER.info('Musly returned %d different similarities for %d tracks' % (len(sims), len(resp_similarity)-1))
